# StylerX-Styler_for_OBS_Studio

./: .gitignore  README.md  stylerx.cmd
StylerX/: CMakeLists.txt
StylerX/src/: ColorPickerWidget.cpp  ColorPickerWidget.h  QSSEditorWidget.cpp  QSSEditorWidget.h  SettingsManager.cpp  SettingsManager.h  StyleParser.cpp  StyleParser.h  ThemeApplier.cpp  ThemeApplier.h  ThemeData.h  ThemeEditorDock.cpp  ThemeEditorDock.h  ThemeLibraryManager.cpp  ThemeLibraryManager.h  ThemeManager.cpp  ThemeManager.h  ThemeStorage.cpp  ThemeStorage.h  WidgetInspector.cpp  WidgetInspector.h  plugin.cpp  plugin.h
docs/wiki/: Building-from-Source.md  CLI-Reference.md  Home.md  Installation.md  Theme-Format.md  Troubleshooting.md  Usage.md
stylerx-cli/: README.md  stylerx.bat  stylerx.py
